<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_my_holidays"
        android:name="com.example.holymoly.ui.drawer.MyHolidaysFragment"
        android:label="@string/menu_my_holidays"
        tools:layout="@layout/fragment_my_holidays" />

    <fragment
        android:id="@+id/nav_my_flight"
        android:name="com.example.holymoly.ui.drawer.MyFlightFragment"
        android:label="@string/menu_my_flight"
        tools:layout="@layout/fragment_my_flight" />

    <fragment
        android:id="@+id/nav_md_pick"
        android:name="com.example.holymoly.ui.tab.MDFragment"
        android:label="@string/md_pick"
        tools:layout="@layout/fragment_m_d" />

    <fragment
        android:id="@+id/nav_bucket_list"
        android:name="com.example.holymoly.ui.tab.BucketListFragment"
        android:label="@string/bucket_list"
        tools:layout="@layout/fragment_bucket_list"/>
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.holymoly.ui.tab.HomeFragment"
        android:label=""
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.holymoly.ui.tab.CalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar"/>
    <fragment
        android:id="@+id/nav_flight"
        android:name="com.example.holymoly.ui.tab.FlightFragment"
        android:label="@string/flight"
        tools:layout="@layout/fragment_flight"/>
</navigation>